classDiagram
    class H3SpatialConsistency {
        global_coherence
        neighbor_correlations
        cell_count
        edge_count
    }
    class H3BeliefUpdateResult {
        h3_beliefs
        average
        aggregate_free_energy
    }
    class H3GridInferenceResult {
        cell_results
        aggregate_free_energy
        metadata
    }
    class RunManifest {
        schema_version
        generated_files
        metrics
        validation
    }
    H3BeliefUpdateResult --> H3SpatialConsistency
    H3GridInferenceResult --> H3SpatialConsistency
    H3GridInferenceResult --> RunManifest
